--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,49 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout android:id="@+id/activity_flicker"
+<android.support.design.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/coordinator_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="me.tiagomota.getflickred.ui.home.HomeActivity">
+    android:background="@android:color/background_light"
+    android:fitsSystemWindows="true">
 
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/text_input_layout_username"
+    <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/activity_flicker"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="@string/home_username_field_hint">
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        tools:context="me.tiagomota.getflickred.ui.home.HomeActivity">
 
-        <android.support.design.widget.TextInputEditText
-            android:id="@+id/edit_text_username"
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/text_input_layout_username"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:maxLines="1"
-            android:imeOptions="actionDone"
-            android:maxLength="100"
-            android:inputType="text|textNoSuggestions" />
+            android:hint="@string/home_username_field_hint">
 
-    </android.support.design.widget.TextInputLayout>
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/edit_text_username"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:imeOptions="actionDone"
+                android:inputType="text|textNoSuggestions"
+                android:maxLength="100"
+                android:maxLines="1" />
 
-    <android.support.v7.widget.AppCompatButton
-        android:id="@+id/btn_submit"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/text_input_layout_username"
-        android:layout_centerInParent="true"
-        android:text="@string/home_submit_btn" />
+        </android.support.design.widget.TextInputLayout>
 
-    <ProgressBar
-        style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
-        android:id="@+id/progress_bar"
-        android:layout_width="match_parent"
-        android:layout_height="8dp"
-        android:layout_marginTop="24dp"
-        android:indeterminate="true"
-        android:layout_below="@+id/text_input_layout_username"
-        android:visibility="gone" />
+        <android.support.v7.widget.AppCompatButton
+            android:id="@+id/btn_submit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/text_input_layout_username"
+            android:layout_centerInParent="true"
+            android:text="@string/home_submit_btn" />
 
-</RelativeLayout>
+        <ProgressBar
+            android:id="@+id/progress_bar"
+            style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="8dp"
+            android:layout_below="@+id/text_input_layout_username"
+            android:layout_marginTop="24dp"
+            android:indeterminate="true"
+            android:visibility="gone" />
+
+    </RelativeLayout>
+</android.support.design.widget.CoordinatorLayout>
