--- a/app/src/main/res/layout/activity_flickr.xml
+++ b/app/src/main/res/layout/activity_flickr.xml
@@ -58,6 +58,15 @@
 
                 </android.support.design.widget.TextInputLayout>
 
+                <TextView
+                    android:id="@+id/progress_indicator"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:layout_below="@id/text_input_layout_username"
+                    style="@style/TextAppearance.AppCompat.Body1"
+                    android:textStyle="italic" />
+
             </RelativeLayout>
 
         </android.support.design.widget.CollapsingToolbarLayout>
