--- a/app/src/main/res/layout-large/activity_flickr_content.xml
+++ b/app/src/main/res/layout-large/activity_flickr_content.xml
@@ -6,12 +6,14 @@
 
     <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/list_fragment_container"
-        android:layout_width="@dimen/flickr_list_fragment_width"
+        android:layout_width="0dp"
+        android:layout_weight="0.4"
         android:layout_height="match_parent" />
 
     <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/detail_fragment_container"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
+        android:layout_weight="0.6"
         android:layout_height="match_parent" />
 
 </LinearLayout>
