--- a/app/src/main/res/layout/activity_flickr.xml
+++ b/app/src/main/res/layout/activity_flickr.xml
@@ -4,12 +4,12 @@
     android:id="@+id/coordinator_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true">
+    android:fitsSystemWindows="false">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:fitsSystemWindows="true"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
@@ -17,7 +17,7 @@
             android:id="@+id/collapsing_toolbar_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:fitsSystemWindows="true"
+            android:fitsSystemWindows="false"
             app:contentScrim="?attr/colorPrimary"
             app:expandedTitleMarginEnd="64dp"
             app:expandedTitleMarginStart="48dp"
@@ -26,23 +26,24 @@
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_margin="@dimen/activity_horizontal_margin">
+                android:layout_height="wrap_content" >
 
-                <ImageView
-                    android:id="@+id/logo"
+                <android.support.v7.widget.Toolbar
+                    android:id="@+id/toolbar"
                     android:layout_width="match_parent"
-                    android:layout_height="150dp"
-                    android:layout_marginBottom="@dimen/activity_vertical_margin"
-                    android:src="@drawable/flickr_logo"
-                    app:layout_collapseMode="parallax" />
+                    android:layout_height="?attr/actionBarSize"
+                    android:visibility="gone"
+                    app:layout_collapseMode="pin"
+                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+
 
                 <android.support.design.widget.TextInputLayout
                     android:id="@+id/text_input_layout_username"
+                    android:visibility="visible"
+                    android:layout_margin="@dimen/activity_horizontal_margin"
+                    android:layout_below="@+id/toolbar"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_below="@+id/logo"
                     android:layout_marginBottom="@dimen/activity_vertical_margin"
                     android:hint="@string/toolbar_username_field_hint"
                     app:layout_collapseMode="pin">
@@ -60,11 +61,13 @@
 
                 <TextView
                     android:id="@+id/progress_indicator"
+                    style="@style/TextAppearance.AppCompat.Body1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_centerHorizontal="true"
                     android:layout_below="@id/text_input_layout_username"
-                    style="@style/TextAppearance.AppCompat.Body1"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginBottom="16dp"
+                    android:visibility="gone"
                     android:textStyle="italic" />
 
             </RelativeLayout>
