--- a/app/src/main/res/layout/list_photo_item.xml
+++ b/app/src/main/res/layout/list_photo_item.xml
@@ -3,14 +3,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="@dimen/activity_horizontal_margin">
+    android:padding="16dp">
 
     <ImageView
         android:id="@+id/photo"
         android:layout_width="@dimen/flickr_list_item_photo_size"
         android:layout_height="@dimen/flickr_list_item_photo_size"
-        android:layout_marginEnd="@dimen/activity_horizontal_margin"
-        android:layout_marginRight="@dimen/activity_horizontal_margin" />
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp" />
 
     <RelativeLayout
         android:layout_width="match_parent"
