--- a/app/src/main/res/layout/activity_flickr.xml
+++ b/app/src/main/res/layout/activity_flickr.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout android:id="@+id/coordinator_layout"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/coordinator_layout"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="false">
@@ -21,12 +22,12 @@
             app:contentScrim="?attr/colorPrimary"
             app:expandedTitleMarginEnd="64dp"
             app:expandedTitleMarginStart="48dp"
-            app:layout_scrollFlags="enterAlways"
+            app:layout_scrollFlags="enterAlwaysCollapsed"
             app:titleEnabled="false">
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" >
+                android:layout_height="wrap_content">
 
                 <android.support.v7.widget.Toolbar
                     android:id="@+id/toolbar"
@@ -36,17 +37,25 @@
                     app:layout_collapseMode="pin"
                     app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
+                <FrameLayout
+                    android:id="@+id/dummy_focus_catcher"
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:focusable="true"
+                    android:focusableInTouchMode="true" />
 
                 <android.support.design.widget.TextInputLayout
                     android:id="@+id/text_input_layout_username"
-                    android:visibility="visible"
-                    android:layout_margin="@dimen/activity_horizontal_margin"
-                    android:layout_below="@+id/toolbar"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="@dimen/activity_vertical_margin"
+                    android:layout_below="@+id/toolbar"
+                    android:layout_marginBottom="8dp"
+                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
+                    android:layout_marginStart="@dimen/activity_horizontal_margin"
+                    android:layout_marginTop="16dp"
                     android:hint="@string/toolbar_username_field_hint"
-                    app:layout_collapseMode="pin">
+                    android:visibility="visible"
+                    app:layout_collapseMode="parallax">
 
                     <android.support.design.widget.TextInputEditText
                         android:id="@+id/edit_text_username"
@@ -59,26 +68,40 @@
 
                 </android.support.design.widget.TextInputLayout>
 
+                <android.support.v7.widget.AppCompatButton
+                    android:id="@+id/find_button"
+                    style="@style/Widget.AppCompat.Button.Colored"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/text_input_layout_username"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginBottom="16dp"
+                    android:text="@string/toolbar_find_button"
+                    android:textColor="@color/backgroundColor"
+                    app:layout_collapseMode="parallax" />
+
                 <TextView
                     android:id="@+id/progress_indicator"
                     style="@style/TextAppearance.AppCompat.Body1"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="36dp"
                     android:layout_below="@id/text_input_layout_username"
                     android:layout_centerHorizontal="true"
                     android:layout_marginBottom="16dp"
+                    android:gravity="center"
+                    android:textStyle="italic"
                     android:visibility="gone"
-                    android:textStyle="italic" />
+                    app:layout_collapseMode="parallax"
+                    tools:text="Loading stuff..." />
 
             </RelativeLayout>
 
         </android.support.design.widget.CollapsingToolbarLayout>
-
     </android.support.design.widget.AppBarLayout>
 
 
     <include
-        layout="@layout/activity_flickr_content"
+        layout="@layout/content_flickr_activity"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
