--- a/app/src/main/res/layout/fragment_flickr_photo_detail.xml
+++ b/app/src/main/res/layout/fragment_flickr_photo_detail.xml
@@ -18,7 +18,8 @@
             <ImageView
                 android:id="@+id/image"
                 android:layout_width="match_parent"
-                android:layout_height="250dp" />
+                android:scaleType="centerCrop"
+                android:layout_height="300dp" />
 
             <RelativeLayout
                 android:layout_width="match_parent"
