--- a/app/src/main/res/layout/list_photo_item.xml
+++ b/app/src/main/res/layout/list_photo_item.xml
@@ -7,16 +7,16 @@
 
     <ImageView
         android:id="@+id/photo"
+        android:layout_centerVertical="true"
         android:layout_width="@dimen/flickr_list_item_photo_size"
         android:layout_height="@dimen/flickr_list_item_photo_size"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp" />
+        android:layout_marginEnd="16dp" />
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_toEndOf="@id/photo"
-        android:layout_toRightOf="@id/photo" >
+        android:layout_centerVertical="true">
 
         <TextView
             android:id="@+id/title"
@@ -26,21 +26,15 @@
             tools:text="Title" />
 
         <TextView
-            android:id="@+id/upload_date"
+            android:id="@+id/comments"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/title"
             android:layout_marginTop="@dimen/activity_vertical_margin"
             style="@android:style/TextAppearance.Material.Caption"
-            tools:text="Uploaded at: " />
+            tools:text="Comments " />
 
-        <TextView
-            android:id="@+id/taken_date"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/upload_date"
-            style="@android:style/TextAppearance.Material.Caption"
-            tools:text="Taken at: " />
     </RelativeLayout>
+
 
 </RelativeLayout>
