--- a/app/src/main/res/layout/list_photo_item.xml
+++ b/app/src/main/res/layout/list_photo_item.xml
@@ -7,31 +7,42 @@
 
     <ImageView
         android:id="@+id/photo"
-        android:layout_centerVertical="true"
         android:layout_width="@dimen/flickr_list_item_photo_size"
         android:layout_height="@dimen/flickr_list_item_photo_size"
-        android:layout_marginEnd="16dp" />
+        android:layout_centerVertical="true"
+        android:layout_marginEnd="16dp"
+        android:contentDescription="@string/dummy_content_description" />
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_toEndOf="@id/photo"
-        android:layout_centerVertical="true">
+        android:layout_centerVertical="true"
+        android:layout_toEndOf="@id/photo">
 
         <TextView
             android:id="@+id/title"
+            style="@android:style/TextAppearance.Material.Subhead"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            style="@android:style/TextAppearance.Material.Subhead"
             tools:text="Title" />
 
         <TextView
-            android:id="@+id/comments"
+            android:id="@+id/tags"
+            style="@android:style/TextAppearance.Material.Body1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/title"
             android:layout_marginTop="@dimen/activity_vertical_margin"
-            style="@android:style/TextAppearance.Material.Caption"
+            android:textColor="@color/textColorSecondary"
+            tools:text="Tags " />
+
+        <TextView
+            android:id="@+id/comments"
+            style="@android:style/TextAppearance.Material.Body1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/tags"
+            android:textColor="@color/textColorSecondary"
             tools:text="Comments " />
 
     </RelativeLayout>
