--- a/app/src/main/res/layout/fragment_flickr_photo_detail.xml
+++ b/app/src/main/res/layout/fragment_flickr_photo_detail.xml
@@ -7,6 +7,7 @@
     android:background="@color/backgroundColor">
 
     <RelativeLayout
+        android:id="@+id/detail_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
